--- a/src/assets/styles/components/_components.scss
+++ b/src/assets/styles/components/_components.scss
@@ -1,6 +1,31 @@
+@layer base {
+    h1 {
+      @apply text-4xl font-medium;
+    }
+    h2 {
+      @apply text-xl font-medium;
+    }
+    h3 {
+      @apply text-lg font-medium;
+    }
+    a {
+      @apply underline;
+    }
+  }
+
 @layer components {
+
+    .navbar{
+        @apply relative flex flex-wrap text-center items-center justify-between px-3 py-2;
+    }
+
+    .nav-link{
+        @apply text-xl-l uppercase block py-2 no-underline text-white-darker transition delay-150 ease-in-out hover:text-white;
+        //CAMBIAR DELAY A .15S
+    }
+
     .card{
-        @apply max-w-xs	text-center mb-6 relative flex flex-col min-w-0 break-words bg-white bg-clip-border	border rounded;
+        @apply max-w-xs text-center mb-6 relative flex flex-col min-w-0 break-words bg-white bg-clip-border	border rounded;
     }
 
     .card-img-top{
@@ -22,5 +47,44 @@
 
     .card-text{
         @apply m-0;
+    }
+
+    .row{
+        @apply flex flex-wrap -mx-4;
+        //@apply flex flex-wrap flex-col space-x-4 md:flex-row;
+    }
+
+    .col{
+        @apply w-full md:w-1/2 px-3;
+        //@apply flex-1.1;
+        //@apply w-full max-w-full flex-1.1 px-1.5 mt-1;
+        //AÑADIR LOS PADDINGS
+    }
+
+    .col-auto{
+        @apply flex-1.2;
+    }
+
+    .form-select{
+        @apply w-full text-base py-1.5 pl-3 pr-9 font-normal leading-normal bg-white border border-solid border-gray rounded focus:border-blue-2 focus:shadow-blue;
+        //PADDING y BLOCK
+    }
+
+    .form-control{
+        @apply block w-full text-base py-1.5 px-3 font-normal leading-normal bg-white bg-clip-padding border border-solid border-gray rounded focus:border-blue-2 focus:shadow-blue;
+        //PADDING y COLOR y DURATION 
+    }
+
+    .form-check{
+        @apply inline-block;
+    }
+
+    .form-check-input{
+        @apply w-4 h-4 mt-1 mr-2 float-left bg-white bg-no-repeat bg-middle bg-contain checked:bg-test checked:border-blue checked:bg-blue border focus:border-blue-2 focus:shadow-blue border-solid border-opacity-25 appearance-none;  
+    }
+
+    .btn{
+        @apply inline-block text-base font-normal text-center text-white leading-normal align-middle border border-solid border-transparent px-3 py-1.5  bg-primary focus:shadow-blue rounded;
+        //REVISAR PADDING y TRANSICION 
     }
 }
